--- a/.env.example
+++ b/.env.example
@@ -22,4 +22,4 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=''
 CLOUDINARY_API_KEY=''
 CLOUDINARY_URL=''
 CLOUDINARY_API_SECRET=''
-CLOUDINARY_FOLDER='DJAOULI'
+CLOUDINARY_FOLDER='GALLERY'
