Removed unused image files

--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "@sanity/vision": "^3.99.0",
     "@supabase/supabase-js": "^2.50.5",
     "@vercel/analytics": "^1.5.0",
+    "EffectComposer": "link:three/examples/jsm/postprocessing/EffectComposer",
     "balloons-js": "^0.0.3",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.6.1",
     "fast-xml-parser": "^5.2.5",
-    "framer-motion": "^12.23.3",
+    "framer-motion": "^12.23.6",
+    "gsap": "^3.13.0",
     "imagemin": "^9.0.1",
     "imagemin-jpegtran": "^8.0.0",
     "ldrs": "^1.1.7",
+    "lenis": "^1.3.8",
     "lomi.cli": "^2.0.4",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
@@ -56,6 +59,7 @@
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.178.0",
     "tw-animate-css": "^1.3.5"
   },
   "devDependencies": {
@@ -66,6 +70,7 @@
     "@types/node": "^20.19.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/three": "^0.178.1",
     "eslint": "^9.31.0",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4.1.11",
