--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
 ## Sanity
 NEXT_PUBLIC_SANITY_PROJECT_ID=''
 NEXT_PUBLIC_SANITY_DATASET='production'
-NEXT_PUBLIC_SANITY_API_VERSION='2023-05-03'
-SANITY_WEBHOOK_SECRET=''
 
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=''
@@ -11,15 +9,17 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=''
 # lomi.
 LOMI_API_URL='https://api.lomi.africa/v1'
 LOMI_API_KEY=''
-LOMI_WEBHOOK_URL=''
+LOMI_WEBHOOK_URL='https://www.kamayakoi.com/api/lomi/webhook'
 LOMI_WEBHOOK_SECRET=''
 
 # Resend
 RESEND_API_KEY=''
+FROM_EMAIL=''
+APP_BASE_URL=''
 
 # Cloudinary
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=''
 CLOUDINARY_API_KEY=''
-CLOUDINARY_URL=''
+CLOUDINARY_URL='cloudinary://'
 CLOUDINARY_API_SECRET=''
-CLOUDINARY_FOLDER='GALLERY'
+CLOUDINARY_FOLDER=''
