--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ next-env.d.ts
 .env.production
 data/
 cloudinary-app/
+
+# PDF test files
+test-ticket-receipt.pdf
+test-pdf-generator.js
+package-test.json
+README-PDF-TEST.md
