--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next": "15.2.4",
     "next-sanity": "^9.12.2",
     "next-themes": "^0.4.6",
+    "pdf-lib": "^1.17.1",
     "plaiceholder": "^3.0.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
