--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "clean": "rm -rf .next",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "revalidate": "tsx lib/actions/cli-revalidate.ts",
+    "revalidate:events": "tsx lib/actions/cli-revalidate.ts events",
+    "revalidate:posts": "tsx lib/actions/cli-revalidate.ts posts",
+    "revalidate:products": "tsx lib/actions/cli-revalidate.ts products",
+    "revalidate:homepage": "tsx lib/actions/cli-revalidate.ts homepage"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
@@ -19,6 +24,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -77,6 +83,7 @@
     "eslint": "^9.34.0",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4.1.12",
+    "tsx": "^4.19.3",
     "typescript": "^5.9.2"
   }
 }
