--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "revalidate:homepage": "tsx lib/actions/cli-revalidate.ts homepage"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.7",
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@lomi./sdk": "^0.1.1",
     "@portabletext/react": "^3.2.4",
@@ -29,8 +29,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@sanity/icons": "^3.7.4",
-    "@sanity/vision": "^3.99.0",
-    "@supabase/supabase-js": "^2.57.2",
+    "@sanity/vision": "^4.10.2",
+    "@supabase/supabase-js": "^2.75.0",
     "@vercel/analytics": "^1.5.0",
     "EffectComposer": "link:three/examples/jsm/postprocessing/EffectComposer",
     "balloons-js": "^0.0.3",
@@ -39,8 +39,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.6.1",
-    "fast-xml-parser": "^5.2.5",
-    "framer-motion": "^12.23.12",
+    "embla-carousel-react": "^8.6.0",
+    "fast-xml-parser": "^5.3.0",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "imagemin": "^9.0.1",
     "imagemin-jpegtran": "^8.0.0",
@@ -54,36 +55,36 @@
     "pdf-lib": "^1.17.1",
     "plaiceholder": "^3.0.0",
     "qrcode.react": "^4.2.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hooks-global-state": "^2.1.0",
     "react-phone-number-input": "^3.4.12",
     "react-swipeable": "^7.0.2",
     "react-use-keypress": "^1.3.1",
     "resend": "^4.8.0",
-    "sanity": "^3.99.0",
-    "sharp": "^0.34.3",
+    "sanity": "^4.10.2",
+    "sharp": "^0.34.4",
     "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.178.0",
-    "tw-animate-css": "^1.3.8"
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/imagemin": "^9.0.1",
     "@types/imagemin-jpegtran": "^5.0.4",
-    "@types/node": "^20.19.13",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
+    "@types/node": "^20.19.21",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@types/three": "^0.178.1",
-    "eslint": "^9.35.0",
+    "eslint": "^9.37.0",
     "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4.1.13",
-    "tsx": "^4.20.5",
-    "typescript": "^5.9.2"
+    "tailwindcss": "^4.1.14",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
