--- a/.github/workflows/update-expired-payments.yml
+++ b/.github/workflows/update-expired-payments.yml
@@ -37,6 +37,7 @@ jobs:
           # Call the Edge Function to update expired payments
           RESPONSE=$(curl -s -X POST "https://ndrbkzfpbnitxkkwmsdf.supabase.co/functions/v1/update-expired-payments" \
             -H "Authorization: Bearer ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}" \
+            -H "apikey: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}" \
             -H "Content-Type: application/json")
 
           echo "📊 Update Response: $RESPONSE"
