--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ NEXT_PUBLIC_SUPABASE_URL=''
 NEXT_PUBLIC_SUPABASE_ANON_KEY=''
 
 # lomi.
-LOMI_API_URL='https://api.lomi.africa/v1'
+LOMI_API_URL='https://api.lomi.africa'
 LOMI_API_KEY=''
 LOMI_WEBHOOK_URL='https://www.kamayakoi.com/api/lomi/webhook'
 LOMI_WEBHOOK_SECRET=''
