--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/three": "^0.178.1",
     "eslint": "^9.39.1",
     "eslint-config-next": "15.2.6",
+    "knip": "^5.83.1",
     "prettier": "^3.7.4",
     "tailwindcss": "^4.1.17",
     "tsx": "^4.21.0",
