--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "clean": "rm -rf .next",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -17,77 +17,52 @@
     "revalidate:homepage": "tsx lib/actions/cli-revalidate.ts homepage"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.9",
-    "@heroicons/react": "^2.2.0",
-    "@lomi./sdk": "^0.1.1",
     "@portabletext/react": "^3.2.4",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-tabs": "^1.1.13",
     "@sanity/icons": "^3.7.4",
-    "@sanity/vision": "^4.20.3",
-    "@supabase/supabase-js": "^2.86.2",
+    "@sanity/vision": "^4.22.0",
+    "@supabase/supabase-js": "^2.95.3",
     "@vercel/analytics": "^1.6.1",
-    "EffectComposer": "link:three/examples/jsm/postprocessing/EffectComposer",
-    "balloons-js": "^0.0.3",
     "class-variance-authority": "^0.7.1",
-    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.6.1",
     "embla-carousel-react": "^8.6.0",
-    "fast-xml-parser": "^5.3.2",
-    "framer-motion": "^12.23.25",
-    "gsap": "^3.13.0",
-    "imagemin": "^9.0.1",
-    "imagemin-jpegtran": "^8.0.0",
-    "ldrs": "^1.1.9",
-    "lenis": "^1.3.15",
-    "lomi.cli": "^2.0.4",
+    "framer-motion": "^12.33.0",
     "lucide-react": "^0.485.0",
-    "next": "15.2.6",
+    "next": "^16.0.0",
     "next-sanity": "^9.12.3",
     "next-themes": "^0.4.6",
-    "pdf-lib": "^1.17.1",
-    "plaiceholder": "^3.0.0",
-    "qrcode.react": "^4.2.0",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "react-hooks-global-state": "^2.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-phone-number-input": "^3.4.14",
-    "react-swipeable": "^7.0.2",
-    "react-use-keypress": "^1.3.1",
-    "resend": "^4.8.0",
-    "sanity": "^4.20.3",
-    "sharp": "^0.34.5",
+    "sanity": "^4.22.0",
     "sonner": "^2.0.7",
-    "styled-components": "^6.1.19",
-    "tailwind-animate": "^0.2.10",
+    "styled-components": "^6.3.9",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.178.0",
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/imagemin": "^9.0.1",
-    "@types/imagemin-jpegtran": "^5.0.4",
-    "@types/node": "^20.19.25",
-    "@types/react": "^19.2.7",
+    "@next/eslint-plugin-next": "^16.1.6",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^20.19.33",
+    "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
-    "@types/three": "^0.178.1",
-    "eslint": "^9.39.1",
-    "eslint-config-next": "15.2.6",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "knip": "^5.83.1",
-    "prettier": "^3.7.4",
-    "tailwindcss": "^4.1.17",
+    "prettier": "^3.8.1",
+    "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0"
   }
 }
