--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ NEXT_PUBLIC_SANITY_DATASET='production'
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=''
 NEXT_PUBLIC_SUPABASE_ANON_KEY=''
+SUPABASE_SERVICE_ROLE_KEY=''
 
 # lomi.
 LOMI_WEBHOOK_SECRET=''
